DespliegueKubernetes/microservicios-yml/00-namespace.yml
# Namespace para todos los microservicios
apiVersion: v1
kind: Namespace
metadata:
  name: microservicios
  labels:
    name: microservicios
