DespliegueKubernetes/microservicios-yml/02-ms-clientes-service.yml
# Service para ms-clientes
apiVersion: v1
kind: Service
metadata:
  name: ms-clientes-service
  namespace: microservicios
  labels:
    app: ms-clientes
spec:
  type: ClusterIP
  selector:
    app: ms-clientes
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
