DespliegueKubernetes/microservicios-yml/06-notificacion-service.yml
# Service para notificacion-service
apiVersion: v1
kind: Service
metadata:
  name: notificacion-service
  namespace: microservicios
  labels:
    app: notificacion-service
spec:
  type: ClusterIP
  selector:
    app: notificacion-service
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
