DespliegueKubernetes/microservicios-yml/08-zone-core-service.yml
# Service para zone-core
apiVersion: v1
kind: Service
metadata:
  name: zone-core-service
  namespace: microservicios
  labels:
    app: zone-core
spec:
  type: ClusterIP
  selector:
    app: zone-core
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
